Fix compiler warnings / compliance errors